--- a/css/style.css
+++ b/css/style.css
@@ -588,10 +588,37 @@ main {
 
 
 
+.home .content h3 span,
+.Gry .heading span {
+    color: var(--main-color);
+    text-transform: uppercase;
+}
 
+/* Slider styling */
+.home .home-slider,
+.Gry .home-slider {
+    width: 100%;
+    height: 50rem;
+    /* Adjust the height as needed */
+    /* overflow: hidden; */
+    margin-top: 6rem;
+    /* Adjust margin-top for the gallery section */
+}
 
+.home .home-slider .swiper-slide,
+.Gry .home-slider .swiper-slide {
+    overflow: hidden;
+    border-radius: 1.5rem;
+    width: 50rem;
+    height: 100%;
+}
 
-
+.home .home-slider .swiper-slide img,
+.Gry .home-slider .swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 
 
 
