--- a/css/style.css
+++ b/css/style.css
@@ -84,6 +84,7 @@ html::-webkit-scrollbar-thumb {
 
 section {
     padding: 2rem 9%;
+    background: #e8e8e8;
 }
 
 
@@ -324,270 +325,6 @@ section {
 
 
 
-.rr {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center
-}
-
-ul {
-    list-style-type: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    letter-spacing: var(--spacing);
-    text-transform: capitalize;
-    line-height: 1.25;
-    margin-bottom: 0.75rem;
-    font-family: var(--ff-primary);
-}
-
-h1 {
-    font-size: 3rem;
-}
-
-h2 {
-    font-size: 2rem;
-}
-
-h3 {
-    font-size: 1.25rem;
-}
-
-h4 {
-    font-size: 0.875rem;
-}
-
-p {
-    margin-bottom: 1.25rem;
-    color: var(--clr-grey-5);
-}
-
-@media screen and (min-width: 800px) {
-    h1 {
-        font-size: 4rem;
-    }
-
-    h2 {
-        font-size: 2.5rem;
-    }
-
-    h3 {
-        font-size: 1.75rem;
-    }
-
-    h4 {
-        font-size: 1rem;
-    }
-
-    body {
-        font-size: 1rem;
-    }
-
-    h1,
-    h2,
-    h3,
-    h4 {
-        line-height: 1;
-    }
-}
-
-/*  global classes */
-
-/* section */
-.section {
-    padding: 5rem 0;
-}
-
-.section-center {
-    width: 90vw;
-    margin: 0 auto;
-    max-width: 1170px;
-}
-
-@media screen and (min-width: 992px) {
-    .section-center {
-        width: 95vw;
-    }
-}
-
-main {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-}
-
-/*
-  =============== 
-  Reviews
-  ===============
-  */
-main {
-    min-height: 100vh;
-    display: grid;
-    place-items: center;
-}
-
-.title {
-    text-align: center;
-    margin-bottom: 4rem;
-}
-
-.underline {
-    height: 0.25rem;
-    width: 5rem;
-    background: var(--clr-primary-5);
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.container {
-    width: 80vw;
-    max-width: var(--fixed-width);
-}
-
-.review {
-    width: 90rem;
-    display: flex;
-    background: var(--clr-white);
-    padding: 6.5rem -1rem;
-    border-radius: var(--radius);
-    margin: 4rem 0%;
-    padding-left: 3rem;
-    padding-left: 3rem;
-    box-shadow: var(--light-shadow);
-    justify-content: center;
-    transition: var(--transition);
-    text-align: center;
-    max-width: 100%;
-    flex-direction: column;
-    align-items: center;
-}
-
-.review:hover {
-    box-shadow: var(--dark-shadow);
-}
-
-.img-container {
-    position: relative;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-    margin: 0 auto;
-    margin-bottom: 1.5rem;
-}
-
-#person-img {
-    width: 100%;
-    display: block;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 50%;
-    position: relative;
-}
-
-.img-container::after {
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    content: "\f10e";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 2.5rem;
-    height: 2.5rem;
-    display: grid;
-    place-items: center;
-    border-radius: 50%;
-    transform: translateY(25%);
-    background: var(--clr-primary-5);
-    color: var(--clr-white);
-}
-
-.img-container::before {
-    content: "";
-    width: 100%;
-    height: 100%;
-    background: var(--clr-primary-5);
-    position: absolute;
-    top: -0.25rem;
-    right: -0.5rem;
-    border-radius: 50%;
-}
-
-#author {
-    margin-bottom: 0.25rem;
-    font-size: xx-large;
-}
-
-#job {
-    margin-bottom: 0.5rem;
-    margin-top: 2rem;
-    text-transform: uppercase;
-    color: var(--clr-primary-5);
-    font-weight: 700;
-    font-size: 1.85rem;
-}
-
-#info {
-    margin: 3rem;
-    font-weight: 900;
-}
-
-.prev-btn,
-.next-btn {
-    color: var(--clr-primary-7);
-    font-size: 1.25rem;
-    background: transparent;
-    border-color: transparent;
-    margin: 0 0.5rem;
-    transition: var(--transition);
-    cursor: pointer;
-}
-
-.prev-btn:hover,
-.next-btn:hover {
-    color: var(--clr-primary-5);
-}
-
-.random-btn {
-    margin-top: 1.5rem;
-    margin-bottom: 2rem;
-    background: var(--clr-primary-10);
-    color: var(--clr-primary-5);
-    padding: 0.25rem 0.5rem;
-    text-transform: capitalize;
-    border-radius: var(--radius);
-    transition: var(--transition);
-    border-color: var(--clr-primary-5);
-    cursor: pointer;
-    padding: 1rem 3rem;
-    font-weight: bold;
-}
-
-.random-btn:hover {
-    background: var(--clr-primary-5);
-    color: var(--clr-primary-1);
-}
-
-.button-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 3rem;
-
-}
-
-
-
-
 .home .content h3 span,
 .Gry .heading span {
     color: var(--main-color);
@@ -599,17 +336,16 @@ main {
 .Gry .home-slider {
     width: 100%;
     height: 50rem;
-    /* Adjust the height as needed */
-    /* overflow: hidden; */
+    overflow: hidden;
     margin-top: 6rem;
-    /* Adjust margin-top for the gallery section */
 }
 
 .home .home-slider .swiper-slide,
 .Gry .home-slider .swiper-slide {
     overflow: hidden;
     border-radius: 1.5rem;
-    width: 50rem;
+    width: 40rem;
+    border: 1rem solid #333;
     height: 100%;
 }
 
@@ -619,6 +355,145 @@ main {
     height: 100%;
     object-fit: cover;
 }
+
+
+.contact form {
+    max-width: 70rem;
+    margin: 1rem auto;
+    text-align: center;
+}
+
+.contact form .inputBox {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.contact form .inputBox input,
+.contact form textarea {
+    width: 100%;
+    border: 2px solid #333;
+    border-radius: .9rem;
+    padding: 1rem;
+    margin: .7rem 0;
+    font-size: 1.5rem;
+    color: #333;
+    text-transform: none;
+}
+
+.contact form .inputBox input::placeholder,
+.contact form textarea::placeholder {
+    text-transform: capitalize;
+}
+
+.contact form .inputBox input:focus,
+.contact form textarea:focus {
+    border: 2px solid #444;
+    border-radius: .2rem;
+    font-weight: 900;
+
+}
+
+.contact form .inputBox input {
+    width: 49%;
+}
+
+.contact form textarea {
+    resize: none;
+}
+
+/* footer */
+
+.footer {
+    border-top: 2px solid #626262;
+    background: #e8e8e8;
+    text-align: center;
+    padding: 3rem;
+}
+
+.footer .box-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+    gap: 2rem;
+}
+
+.footer .box-container .box h3 {
+    font-size: 3.2rem;
+    text-transform: capitalize;
+    color: var(--primary-color);
+    padding: 1rem 0;
+    font-weight: 800;
+}
+
+.footer .box-container .box p {
+    font-size: 2rem;
+    line-height: 2;
+    color: black;
+    padding: 1rem 0;
+    font-weight: normal;
+}
+
+.footer .box-container .box .share {
+    margin-top: 1rem;
+}
+
+.footer .box-container .box .share a {
+    height: 4.5rem;
+    width: 4.5rem;
+    line-height: 4.5rem;
+    border-radius: 10%;
+    font-size: 1.7rem;
+    background: #a3a3a3;
+    color: white;
+    margin-right: 0.3rem;
+    text-align: center;
+}
+
+.footer .box-container .box .share a:hover {
+    background: white;
+    color: #a3a3a3;
+}
+
+.footer .box-container .box .link {
+    font-size: 1.7rem;
+    line-height: 2;
+    color: var(--primary-color);
+    padding: 0.5rem 0;
+    display: block;
+}
+
+.footer .box-container .box .link:hover {
+    color: var(--secondary);
+}
+
+.footer .credit {
+    text-align: center;
+    margin-top: 3rem;
+    padding-top: 3rem;
+    font-size: 2rem;
+    text-transform: capitalize;
+    color: var(--primary-color);
+    border-top: 0.1rem solid var(--black);
+}
+
+.footer .credit span {
+    color: var(--secondary);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -650,8 +525,13 @@ main {
 
     .service {
         flex-direction: column;
+        align-items: center;
     }
 
+    .home .home-slider .swiper-slide,
+    .Gry .home-slider .swiper-slide {
+        width: 40rem;
+    }
 
 
 
@@ -710,4 +590,8 @@ main {
         width: 100%;
     }
 
+    .home .home-slider .swiper-slide,
+    .Gry .home-slider .swiper-slide {
+        width: 35rem;
+    }
 }
