--- a/css/about.css
+++ b/css/about.css
@@ -63,19 +63,16 @@ section {
   align-items: center;
   justify-content: space-between;
   padding: 1.5rem 9%;
+  height: 9rem;
 }
 
-.header .logo {
-  width: 9rem;
+.header .logo img {
+  width: 12rem;
   background-color: #fff;
   border-radius: 50%;
   padding: 1rem;
+  margin-top: 4rem;
 }
-
-.header .logo span {
-  color: var(--main-color);
-}
-
 .header .navbar a {
   font-size: 1.7rem;
   color: #fff;
