--- a/css/style.css
+++ b/css/style.css
@@ -98,15 +98,28 @@ body {
   padding: 0.8rem 3rem;
   font-size: 1.7rem;
   border-radius: 0.5rem;
-  background: #666;
+  background: #3a3a3a;
   color: #fff;
   cursor: pointer;
   font-weight: 600;
 }
 
-.btn:hover {
-  background: var(--main-color);
+.btn:hover{
+  background: #666666;
 }
+
+.btn a{
+  color: #fff;
+}
+
+.gg{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 25%;
+  padding: 1%;
+}
+
 
 .heading {
   color: #122e25;
@@ -231,7 +244,7 @@ body {
   margin-top: 3rem;
 }
 
-.btn {
+/* .btn {
   margin-top: 1rem;
   display: inline-block;
   padding: 0.8rem 3rem;
@@ -242,13 +255,8 @@ body {
   cursor: pointer;
   font-weight: 600;
   border: 2px solid none;
-}
+} */
 
-.btn:hover {
-  border: 2px solid #666;
-  background: #fff;
-  color: #666;
-}
 
 .heading {
   padding-top: 3rem;
