--- a/css/style.css
+++ b/css/style.css
@@ -628,3 +628,47 @@ textarea {
   font-size: 1.5rem;
   font-weight: 600;
 }
+
+#reviews {
+  margin: 10rem 0;
+  height: fit-content;
+}
+
+.reviewCard {
+  width: 65rem;
+  border-radius: 1rem;
+}
+
+.name {
+  font-weight: 700;
+  background-color: #dddcdc;
+  padding-top: 6px;
+  padding-left: 10px;
+  padding-bottom: 6px;
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+  font-weight: 600;
+  font-size: 2.2rem;
+}
+
+.review {
+  padding: 1rem;
+  font-size: 2.1rem;
+  font-weight: 600;
+}
+
+.rating i {
+  color: #ffb31a;
+  font-size: 2.5rem;
+  margin-top: 0.5rem;
+  align-items: start;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
