--- a/css/sp.css
+++ b/css/sp.css
@@ -38,30 +38,13 @@ html::-webkit-scrollbar-thumb {
     border-radius: 5rem;
 }
 
+body {
+    background: #f3e7db;
+}
+
 section {
-    padding: 6rem 20%;
-    background: #ffffff;
-}
-
-
-.btn {
-    margin-top: 1rem;
-    display: inline-block;
-    padding: 0.8rem 3rem;
-    font-size: 1.7rem;
-    border-radius: 0.5rem;
-    background: #333;
-    color: #fff;
-    cursor: pointer;
-    font-weight: 600;
-}
-
-.btn:hover {
-    background: #666666;
-}
-
-.btn a {
-    color: #fff;
+    padding: 2rem 9%;
+    background: #f3e7db;
 }
 
 .heading {
@@ -88,14 +71,24 @@ section {
 }
 
 
-.headingAbout {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 2rem;
-    margin-bottom: 8rem;
-    font-size: 6rem;
-    letter-spacing: 0.2rem;
+.btn {
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 0.8rem 3rem;
+    font-size: 1.7rem;
+    border-radius: 0.5rem;
+    background: #3a3a3a;
+    color: #fff;
+    cursor: pointer;
+    font-weight: 600;
+}
+
+.btn:hover {
+    background: #666666;
+}
+
+.btn a {
+    color: #fff;
 }
 
 .header .logo img {
@@ -117,12 +110,6 @@ section {
     color: white;
     border-bottom: 0.2rem solid var(--main-color);
     padding-bottom: 0.5rem;
-}
-
-.heading {
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 #menu-bars {
@@ -162,109 +149,180 @@ section {
     font-size: 4rem;
 }
 
-.marq {
-    padding: 1rem 0;
-    font-family: "Roboto", sans-serif;
-    background: yellow;
+.card-wrapper {
+    max-width: 1100px;
 }
 
-#mt {
-    font-family: "Roboto", sans-serif;
-    padding-right: 1rem;
-    font-weight: lighter;
-    font-size: medium;
+img {
+    width: 100%;
+    display: block;
 }
 
+.img-item img {
+    width: 20rem;
+    height: 20rem;
+}
 
-
-.product-card {
-    display: flex;
-    border: 1px solid #ccc;
-    border-radius: 8px;
+.img-display {
     overflow: hidden;
 }
 
-.left-section {
-    flex: 1;
-    padding: 10px;
-}
-
-.right-section {
-    flex: 1;
-    padding: 10px;
-    background-color: #f9f9f9;
-}
-
-.product-images img {
-    max-width: 100%;
-    height: auto;
-}
-
-.small-images {
-    margin-top: 10px;
-}
-
-.small-images img {
-    width: 50px;
-    height: auto;
-    margin-right: 5px;
-}
-
-.product-info h2 {
-    margin-top: 0;
-}
-
-.action-buttons {
-    margin-top: 20px;
-}
-
-.btn-buy {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.right-section {
-    flex: 1;
-    padding: 20px;
-    background-color: #f9f9f9;
+.img-showcase {
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    border-left: 1px solid #ccc;
+    width: 100%;
+    transition: all 0.5s ease;
+    border-radius: 0.5rem;
+    border: 1rem solid #333;
 }
 
-.product-info {
-    margin-bottom: 20px;
+.img-showcase img {
+    min-width: 100%;
+    height: auto;
 }
 
-.product-info h2 {
-    margin-top: 0;
-    font-size: 24px;
+.img-select {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 2rem;
+}
+
+.img-select img {
+    width: 100%;
+    transition: all 0.5s ease;
+    border-radius: 0.5rem;
+    border: 1rem solid #333;
+}
+
+.img-item {
+    margin: 0.3rem;
+}
+
+.img-item:nth-child(1),
+.img-item:nth-child(2),
+.img-item:nth-child(3) {
+    margin-right: 0;
+}
+
+.img-item:hover {
+    opacity: 0.8;
+}
+
+.product-content {
+    padding: 2rem 1rem;
+    margin-left: 3rem;
+}
+
+.product-title {
+    font-size: 4.5rem;
+    text-transform: capitalize;
+    font-weight: 700;
+    position: relative;
+    color: #12263a;
+    margin: 1rem 0;
+}
+
+.product-title::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 4px;
+    width: 80px;
+    background: #12263a;
+}
+
+.product-rating span {
+    font-weight: 600;
+    color: #252525;
+}
+
+.product-price {
+    margin: 1rem 0;
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.product-price-title {
+    margin-top: 3rem;
+    font-size: 3rem;
+    margin-bottom: 0.5rem;
+}
+
+.product-price span {
+    font-weight: 400;
+}
+
+.product-detail h2 {
+    text-transform: capitalize;
+    color: #12263a;
+    padding-bottom: 0.6rem;
+}
+
+.product-detail p {
+    font-size: 0.9rem;
+    padding: 0.3rem;
+    opacity: 0.8;
+}
+
+.price {
+    display: flex;
+    align-items: center;
+    font-size: 3rem;
+    gap: 10rem;
+    margin-left: 6.5rem;
+}
+
+.sub-title {
+    font-size: 3rem;
+    margin-top: 3rem;
+    font-weight: 600;
+    margin-bottom: 1rem;
     color: #333;
 }
 
-.product-info p {
-    margin: 0 0 10px;
-    font-size: 16px;
-    color: #666;
+.sizes {
+    margin-left: 10rem;
+    margin-top: 1rem;
 }
 
-.action-buttons {
-    text-align: center;
+.sizes li {
+    font-size: 2rem;
+    font-weight: 600;
 }
 
+.desc {
+    font-size: 2rem;
+    font-weight: 600;
+    color: #333;
+}
+
+@media screen and (min-width: 992px) {
+    .Product-card {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-gap: 1.5rem;
+    }
+
+    .card-wrapper {
+        height: fit-content;
+        margin: 3rem auto 2rem auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .product-imgs {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
 
 
-
-
+}
 
 .footer {
     border-top: 2px solid #626262;
-    background: #e8e8e8;
+    background: #f3e7db;
     text-align: center;
     padding: 3rem;
 }
@@ -363,26 +421,13 @@ section {
         width: 40rem;
     }
 
-    .product-card {
+    .product-content {
+        padding: 4rem 5rem;
+        margin: 2rem 4rem;
+        /* align-items: center; */
+        display: flex;
         flex-direction: column;
-        align-items: center;
-    }
-
-    .product-card .left-section,
-    .product-card .right-section {
-        width: 100%;
-        text-align: center;
-        padding: 20px 0;
-    }
-
-    .product-card .left-section img {
-        width: 80%;
-        max-width: 300px;
-    }
-
-    .product-card .right-section {
-        border-left: none;
-        border-top: 1px solid #ccc;
+        justify-content: flex-start;
     }
 }
 
@@ -422,30 +467,13 @@ section {
         font-size: 4rem;
     }
 
-    .product-card .left-section img {
-        max-width: 250px;
-    }
-
-    .product-card .right-section {
-        padding: 20px;
-        border-top: none;
-    }
-
-    .product-card .right-section .product-info h2 {
-        font-size: 20px;
-    }
-
-    .product-card .right-section .product-info p {
-        font-size: 14px;
-    }
-
-    .product-card .right-section .action-buttons {
-        margin-top: 20px;
-    }
-
-    .product-card .right-section .btn-buy {
-        font-size: 16px;
-        padding: 8px 16px;
+    .product-content {
+        padding: 2rem 2rem;
+        margin: 1rem 1rem;
+        /* align-items: center; */
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
     }
 }
 
@@ -465,9 +493,5 @@ section {
     .home .home-slider .swiper-slide,
     .Gry .home-slider .swiper-slide {
         width: 35rem;
-    }
-
-    .product-card .left-section img {
-        max-width: 200px;
     }
 }
