--- a/css/style.css
+++ b/css/style.css
@@ -104,15 +104,15 @@ body {
   font-weight: 600;
 }
 
-.btn:hover{
+.btn:hover {
   background: #666666;
 }
 
-.btn a{
+.btn a {
   color: #fff;
 }
 
-.gg{
+.gg {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -141,12 +141,12 @@ body {
   height: 9rem;
 }
 
-.header .logo img{
+.header .logo img {
   width: 12rem;
   background-color: #fff;
   border-radius: 50%;
   padding: 1rem;
-  margin-top:4rem;
+  margin-top: 4rem;
 }
 
 
@@ -542,6 +542,12 @@ body {
 .credit span {
   font-size: 2.5rem;
   color: #fff;
+}
+
+.swiper {
+  width: 100%;
+  height: fit-content;
+  padding-bottom: 2rem;
 }
 
 /* media queries  */
