--- a/css/sp.css
+++ b/css/sp.css
@@ -165,22 +165,21 @@ img {
 
 .img-display {
     overflow: hidden;
+    border-radius: 0.5rem;
+    border: 1rem solid #333;
 }
 
 .img-showcase {
     display: flex;
-    width: 100%;
-    transition: all 0.5s ease;
-    border-radius: 0.5rem;
-    border: 1rem solid #333;
+    transition: transform 0.5s ease;
 }
 
 .img-showcase img {
     min-width: 100%;
     padding: 1rem;
     height: auto;
-   
 }
+
 
 
 .img-select {
@@ -190,7 +189,6 @@ img {
 }
 
 .img-select img {
-    width: 100%;
     transition: all 0.5s ease;
     border-radius: 0.5rem;
     border: 1rem solid #333;
