--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap");
 
 :root {
   --main-color: rgb(240, 179, 66);
@@ -37,7 +38,7 @@ html::-webkit-scrollbar-thumb {
   background: var(--main-color);
   border-radius: 5rem;
 }
-body{
+body {
   background: #f3e7db;
 }
 section {
@@ -67,7 +68,6 @@ section {
   padding: 1.5rem 9%;
   height: 9rem;
 }
-
 
 .btn {
   margin-top: 1rem;
@@ -170,6 +170,11 @@ section {
   letter-spacing: 0.2rem;
 }
 
+.main_heading {
+  font-family: "Lora", serif;
+  font-optical-sizing: auto;
+  color: #2b463e;
+}
 
 .about .row,
 .row {
