--- a/css/sp.css
+++ b/css/sp.css
@@ -269,8 +269,7 @@ img {
     display: flex;
     align-items: center;
     font-size: 3rem;
-    gap: 10rem;
-    margin-left: 6.5rem;
+    gap: 2rem;
 }
 
 .sub-title {
@@ -279,6 +278,9 @@ img {
     font-weight: 600;
     margin-bottom: 1rem;
     color: #333;
+}
+.new-price {
+    font-weight: 600;
 }
 
 .sizes {
