--- a/css/style.css
+++ b/css/style.css
@@ -374,15 +374,13 @@ body {
 }
 
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
+  max-width: 100%;
 }
 
 /* Section Styles */
 .contact {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: flex-start;
   padding: 50px;
   background-color: #fff;
@@ -438,7 +436,6 @@ body {
 
 /* Map Styles */
 .map {
-  flex: 1;
   margin-left: 50px;
 }
 
